added privacy policy

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Player</string>
     <string name="menu_open_video">Open Video</string>
     <string name="dialog_open_media_title">Enter Url</string>
+    <string name="privacy_policy">Privacy Policy</string>
 </resources>
